codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_unanswered_confirmation.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  Submit with unanswered questions?                                             
  2 unanswered questions                                                        
                                                                                
  › 1. Proceed  Submit with 2 unanswered questions.                             
    2. Go back  Return to the first unanswered question.                        
                                                                                
                                                                                
                                                                                
                                                                                
  Press enter to confirm or esc to go back
